// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EnterpriseList /> renders correctly call clearPortalConfiguration prop 1`] = `
Array [
  <div
    id="smcx-sdk"
  />,
  <main
    role="main"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row mt-4"
      >
        <div
          className="col-sm-12 col-md"
        >
          <h1>
            Enterprise List
          </h1>
        </div>
        <div
          className="col-sm-12 col-md-6 col-lg-4 mb-3 mb-md-0"
        >
          <div
            className="pgn__searchfield d-flex"
          >
            <form
              className="d-flex align-items-center w-100"
              onReset={[Function]}
              onSubmit={[Function]}
              role="search"
            >
              <label
                className="m-0"
                htmlFor="pgn-searchfield-input-1"
              >
                <span
                  className="sr-only"
                >
                  search
                </span>
              </label>
              <input
                className="form-control"
                id="pgn-searchfield-input-1"
                name="searchfield-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search by enterprise name..."
                role="searchbox"
                type="text"
                value=""
              />
              <button
                className="btn"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-search fa-w-16 "
                  data-icon="search"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                <span
                  className="sr-only"
                >
                  submit search
                </span>
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        className="row mt-2"
      >
        <div
          className="col"
        />
      </div>
    </div>
  </main>,
]
`;

exports[`<EnterpriseList /> renders correctly with empty enterprises data 1`] = `
Array [
  <div
    id="smcx-sdk"
  />,
  <main
    role="main"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row mt-4"
      >
        <div
          className="col-sm-12 col-md"
        >
          <h1>
            Enterprise List
          </h1>
        </div>
        <div
          className="col-sm-12 col-md-6 col-lg-4 mb-3 mb-md-0"
        >
          <div
            className="pgn__searchfield d-flex"
          >
            <form
              className="d-flex align-items-center w-100"
              onReset={[Function]}
              onSubmit={[Function]}
              role="search"
            >
              <label
                className="m-0"
                htmlFor="pgn-searchfield-input-3"
              >
                <span
                  className="sr-only"
                >
                  search
                </span>
              </label>
              <input
                className="form-control"
                id="pgn-searchfield-input-3"
                name="searchfield-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search by enterprise name..."
                role="searchbox"
                type="text"
                value=""
              />
              <button
                className="btn"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-search fa-w-16 "
                  data-icon="search"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                <span
                  className="sr-only"
                >
                  submit search
                </span>
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        className="row mt-2"
      >
        <div
          className="col"
        />
      </div>
    </div>
  </main>,
]
`;

exports[`<EnterpriseList /> renders correctly with enterprises data 1`] = `
Array [
  <div
    id="smcx-sdk"
  />,
  <main
    role="main"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row mt-4"
      >
        <div
          className="col-sm-12 col-md"
        >
          <h1>
            Enterprise List
          </h1>
        </div>
        <div
          className="col-sm-12 col-md-6 col-lg-4 mb-3 mb-md-0"
        >
          <div
            className="pgn__searchfield d-flex"
          >
            <form
              className="d-flex align-items-center w-100"
              onReset={[Function]}
              onSubmit={[Function]}
              role="search"
            >
              <label
                className="m-0"
                htmlFor="pgn-searchfield-input-2"
              >
                <span
                  className="sr-only"
                >
                  search
                </span>
              </label>
              <input
                className="form-control"
                id="pgn-searchfield-input-2"
                name="searchfield-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Search by enterprise name..."
                role="searchbox"
                type="text"
                value=""
              />
              <button
                className="btn"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-search fa-w-16 "
                  data-icon="search"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                <span
                  className="sr-only"
                >
                  submit search
                </span>
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        className="row mt-2"
      >
        <div
          className="col"
        />
      </div>
    </div>
  </main>,
]
`;

exports[`<EnterpriseList /> renders correctly with error state 1`] = `
<main
  role="main"
>
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4"
    >
      <div
        className="col"
      >
        <h1>
          Error
        </h1>
        <div
          className="alert fade alert-danger show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            <div
              className=""
            >
              <div
                className="message"
              >
                Network Error
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`<EnterpriseList /> renders correctly with loading state 1`] = `
<div
  className="loading d-flex align-items-center justify-content-center table-loading"
>
  Loading...
</div>
`;
